# sensevis

./: README.md  data.json  main.py  pyproject.toml
src/sensevis/: __init__.py  _post.py  _send.py  _upscaler.py  generateimage.py  readdata.py
tests/: test_image_gen.py  test_scraper.py
