[project]
name = "sensevis"
version = "0.1.0"
authors = [
    { name = "Tommy Zhou", email = "tommy@microjam.dev" }
]
description = "web scraper and image gen tool for SenseAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pathlib>=1.0.1",
    "pillow>=11.3.0",
    "tk>=0.1.0",
    "typing>=3.10.0.0",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
development = true
